--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <!-- navbar start -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">KOPI <span> NUSANTARA aku</span></a>
+      <a href="#" class="navbar-logo">KOPI <span> SYAMXI AKBAR</span></a>
 
       <div class="navbar-nav">
         <a href="#home">home</a>
